--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy==1.26.3
-scikit-learn==1.3.2
-streamlit==1.29.0
-streamlit-option-menu==0.3.6
+streamlit==1.39.0
+scikit-learn==1.5.2
+pandas==2.2.3
+numpy==1.26.4
+streamlit-option-menu==0.3.12
